<resources>
    <string name="app_name">Note Vibes</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="note_vibes">Note Vibes</string>
    <string name="slogan">N O T E   Y O U R S E L F</string>
    <string name="todo">To Do</string>
    <string name="list">List</string>
    <string name="sticky_icon">Sticky Notes</string>
    <string name="lock">Password Lock</string>
    <string name="password_lock">Lock Password</string>
    <string name="search_password">Search Password</string>
    <string name="password_title">Password Title</string>
    <string name="password">Password</string>
    <string name="key">Key</string>
    <string name="notes">Notes</string>
    <string name="type_description_here">Type Description Here</string>
    <string name="encrypt">Encrypt</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_url">Add URL</string>
    <string name="forgot_password">Forgot Key</string>
    <string name="typed_description">Description</string>
    <string name="decrypt">Decrypt</string>
    <string name="done">Done</string>
    <string name="key_title">Key Title</string>
    <string name="set_key">Set Key</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="change_key">Change Key</string>
    <string name="what_is">What is.. ?</string>
    <string name="answer_question">Answer Question</string>
    <string name="confirm">Confirm</string>
    <string name="delete_note">Delete Password</string>
    <string name="asking_delete_permission_msg">Are you sure you want to delete this note?</string>
    <string name="enter_key">Enter Key</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="password_incorrect">Key is incorrect. try again!</string>
    <string name="ok">OK</string>
    <string name="enter_set_key">Set Key</string>
    <string name="enter_question">Enter Security Question</string>
    <string name="enter_question_answer">Answer</string>
    <string name="btn_start">GET STARTED</string>

    <string name="et_tit">Enter Title Here</string>
    <string name="et_stickynote"> Sticky Note</string>
    <string name="et_ttl">Enter Tittle Here</string>
    <string name="et_body">Enter Text Here</string>
    <string name="et_sty"> Add Colour</string>
    <string name="et_fontsize">Font Size</string>
    <string name="et_word">Characters</string>
    <string name="et_words">Words</string>
    <string name="et_wordc">Words</string>
    <string name="et_sent">Sentences</string>

    <string name="et_search">Search Sticky</string>
    <string name="et_searchbar">Search Sticky Here</string>
    <string name="et_ttledit">Hello World</string>
    <string name="et_bodyedit">A "Hello World" program generrally is a computer program that displays the message "Hello World". Such a program is very simple in most programmin g languages,and is often used to illustrate the basic syntax of a programming language.It bis often the first program written by people.</string>
    <string name="tv_emptyitm">No Item, Add New</string>
    <string name="tv_selectphoto">Select a Photo</string>
    <string name="et__addurl">Add URL</string>
    <string name="et_inputurl">Type url</string>
    <string name="et_cancel">Cancel</string>
    <string name="et_confirm">Confirm</string>
    <string name="tv_char">characters</string>
    <string name="tv_word">words</string>
    <string name="tv_sen">sentences</string>
    <string name="tv_ccount">0</string>
    <string name="tv_wcount">0</string>
    <string name="tv_scount">0</string>
    <string name="et_tittle">Enter Tittle</string>
    <string name="et_body1">Type Here</string>
    <string name="et_tl">Enter tittle</string>
    <string name="et_bd">Type Here</string>
    <string name="tv_urladding">Add URL</string>
    <string name="tv_4toadding">Add Photo</string>


    <string name="tv_1">characters</string>
    <string name="tv_2">words</string>
    <string name="tv_3">sentences</string>
    <string name="tv_chcount">0</string>
    <string name="tv_wocount">0</string>
    <string name="tv_secount">0</string>


    <string name="note_title">List Title</string>
    <string name="note_subtitle">List Subtitle</string>
    <string name="my_lists">My Lists</string>
    <string name="search_list">search list Here</string>
    <string name="tv_backhome">Easy sticky Note</string>
    <string name="searchstkinput">search sticky note here</string>
    <string name="tv_dltstk">Delete Sticky note</string>
    <string name="stkDeleteNote">Delete</string>
    <string name="tv_dltallstk">Delete All</string>
    <string name="tv_stktext">Are you sure delete all sticky notes?</string>
    <string name="search_notes">search list</string>
    <string name="Options">Options</string>


</resources>




