<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.stkTypeMsg">


    <TextView
        android:id="@+id/tv_scount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:gravity="center"
        android:text="@string/tv_scount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_wcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:gravity="center"
        android:text="@string/tv_wcount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_scount"
        app:layout_constraintTop_toBottomOf="@+id/tv_word"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/tv_sen"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:gravity="center"
        android:text="@string/tv_sen"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center|center_vertical"
        android:text="@string/tv_word"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toStartOf="@+id/tv_sen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_char"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tv_char"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toStartOf="@+id/tv_word"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tv_ccount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_wcount"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_char"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_ok"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_sen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/et_tl"
        android:layout_width="362dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginLeft="@dimen/_100sdp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/et_tl"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorNoteSubtitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/et_bd"
        android:layout_width="392dp"
        android:layout_height="483dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/et_bd"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorNoteSubtitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tl"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>