<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.stkDisplayEdit">


    <TextView
        android:id="@+id/tv_scount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/tv_scount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_tl"
        app:layout_constraintEnd_toEndOf="@+id/tv_sen"
        app:layout_constraintStart_toStartOf="@+id/tv_sen"
        app:layout_constraintTop_toBottomOf="@+id/tv_sen" />

    <TextView
        android:id="@+id/tv_wcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/tv_wcount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_tl"
        app:layout_constraintEnd_toEndOf="@+id/tv_word"
        app:layout_constraintStart_toStartOf="@+id/tv_word"
        app:layout_constraintTop_toBottomOf="@+id/tv_word" />

    <TextView
        android:id="@+id/tv_sen"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:gravity="center"
        android:text="@string/tv_sen"
        android:textColor="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/tv_word"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:gravity="center|center_vertical"
        android:text="@string/tv_word"
        android:textColor="@color/colorIcons"
        app:layout_constraintStart_toEndOf="@+id/tv_char"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_char"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tv_char"
        android:textColor="@color/colorIcons"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/tv_ccount"
        android:textColor="@color/colorNoteSubtitleText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_tl"
        app:layout_constraintEnd_toEndOf="@+id/tv_char"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/tv_char"
        app:layout_constraintTop_toBottomOf="@+id/tv_char" />

    <EditText
        android:id="@+id/et_tl"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/et_tl"
        android:inputType="textImeMultiLine"
        android:textColorHint="@color/colorNoteSubtitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_word" />

    <EditText
        android:id="@+id/et_bd"
        android:layout_width="318dp"
        android:layout_height="416dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/et_bd"
        android:inputType="textImeMultiLine"
        android:textColorHint="@color/colorNoteSubtitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tl"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/select"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="@drawable/background_miscellaneous"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/pickColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewCol1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_1" />

                <ImageView
                    android:id="@+id/imgCol1"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_done"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewCol2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_2" />

                <ImageView
                    android:id="@+id/imgCol2"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewCol3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_3" />

                <ImageView
                    android:id="@+id/imgol3"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewCol4"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_4" />

                <ImageView
                    android:id="@+id/imgCol4"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewCol5"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_5" />

                <ImageView
                    android:id="@+id/imgCol5"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:includeFontPadding="false"
                android:text="@string/pick_color"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13ssp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <LinearLayout
                android:id="@+id/uadding"
                android:layout_width="171dp"
                android:layout_height="54dp"

                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_link"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_web_link"
                    app:tint="@color/colorIcons" />

                <TextView
                    android:id="@+id/tv_urladding"
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"

                    android:text="@string/tv_urladding"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pAdding"
                android:layout_width="202dp"
                android:layout_height="54dp"

                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_img"
                    android:layout_width="41dp"
                    android:layout_height="54dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_ptoadd"
                    app:tint="@color/colorIcons" />

                <TextView
                    android:id="@+id/tv_4toadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:includeFontPadding="false"

                    android:text="@string/tv_4toadding"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="vertical">

                <SeekBar
                    android:id="@+id/sBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="357dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/et_bd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </ImageView>

        <ImageView
            android:id="@+id/img_ok"
            android:layout_width="38dp"
            android:layout_height="37dp"
            android:background="@drawable/stkbackground_green"
            app:srcCompat="@drawable/ic_colourok" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="28dp">

        </ImageView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/stkbackground_green"
            app:srcCompat="@drawable/ic_addhomescreen" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="28dp">

        </ImageView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:background="@drawable/background_delete"
            app:srcCompat="@drawable/dlt" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="28dp">

        </ImageView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


